--- a/configuration-api/pom.xml
+++ b/configuration-api/pom.xml
@@ -12,4 +12,12 @@
 
   <name>Consolidated Configuration Support</name>
   
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.xbean</groupId>
+      <artifactId>xbean-reflect</artifactId>
+      <version>3.7</version>
+    </dependency>
+  </dependencies>
+  
 </project>
