--- a/configuration-api/pom.xml
+++ b/configuration-api/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>xbean-reflect</artifactId>
       <version>3.7</version>
     </dependency>
+    <dependency>
+    	<groupId>commons-lang</groupId>
+    	<artifactId>commons-lang</artifactId>
+    	<version>2.4</version>
+    </dependency>
   </dependencies>
   
 </project>
