--- a/configuration-api/pom.xml
+++ b/configuration-api/pom.xml
@@ -20,14 +20,14 @@
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
-    <groupId>org.commonjava.web</groupId>
+    <groupId>org.commonjava.util</groupId>
     <artifactId>configuration</artifactId>
     <version>0.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>configuration-api</artifactId>
 
-  <name>Consolidated Configuration Support</name>
+  <name>Consolidated Configuration API</name>
   
   <dependencies>
     <dependency>
