--- a/configuration-api/pom.xml
+++ b/configuration-api/pom.xml
@@ -39,6 +39,11 @@
     	<artifactId>commons-lang</artifactId>
     	<version>2.4</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.0.1</version>
+    </dependency>
   </dependencies>
   
 </project>
