--- a/configuration-api/pom.xml
+++ b/configuration-api/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>commons-io</artifactId>
       <version>2.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-interpolation</artifactId>
+      <version>1.19</version>
+    </dependency>
   </dependencies>
   
 </project>
