--- a/configuration-dotconf/pom.xml
+++ b/configuration-dotconf/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.commonjava.util</groupId>
     <artifactId>configuration</artifactId>
-    <version>0.6</version>
+    <version>0.7-SNAPSHOT</version>
   </parent>
   
   <artifactId>configuration-dotconf</artifactId>
