--- a/configuration-api/pom.xml
+++ b/configuration-api/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.commonjava.util</groupId>
     <artifactId>configuration</artifactId>
-    <version>0.6.1</version>
+    <version>0.6.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>configuration-api</artifactId>
