[maven-release-plugin] prepare release configuration-0.6.3

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   
   <groupId>org.commonjava.util</groupId>
   <artifactId>configuration</artifactId>
-  <version>0.6.3-SNAPSHOT</version>
+  <version>0.6.3</version>
   <packaging>pom</packaging>
 
   <name>Consolidated Configuration Support</name>
@@ -38,6 +38,7 @@
     <connection>scm:git:http://jdcasey@github.com/jdcasey/configuration.git</connection>
     <developerConnection>scm:git:git@github.com:jdcasey/configuration.git</developerConnection>
     <url>http://github.com/jdcasey/configuration</url>
+    <tag>configuration-0.6.3</tag>
   </scm>
 
   <dependencies>
@@ -81,7 +82,7 @@
       <dependency>
         <groupId>org.commonjava.util</groupId>
         <artifactId>configuration-api</artifactId>
-        <version>0.6.3-SNAPSHOT</version>
+        <version>0.6.3</version>
       </dependency>
       <dependency>
         <groupId>org.apache.xbean</groupId>
