--- a/configuration-api/pom.xml
+++ b/configuration-api/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.commonjava.util</groupId>
     <artifactId>configuration</artifactId>
-    <version>0.6.3</version>
+    <version>0.6.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>configuration-api</artifactId>
