--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.commonjava</groupId>
     <artifactId>commonjava</artifactId>
-    <version>6-SNAPSHOT</version>
+    <version>6</version>
   </parent>
   
   <groupId>org.commonjava.util</groupId>
