--- a/configuration-api/pom.xml
+++ b/configuration-api/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.commonjava.util</groupId>
     <artifactId>configuration</artifactId>
-    <version>0.7.0</version>
+    <version>0.7.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>configuration-api</artifactId>
