--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ defaults:
     values:
       layout: "slate"
 
-title: "Commonjava@GitHub"
-tagline: "Documentation for Commonjava projects available on GitHub"
+title: "Commonjava :: Configuration"
+tagline: "APIs for Loading Application Configuration Data"
 owner: "John Casey"
 ownerEmail: jdcasey@commonjava.org
