--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ defaults:
       layout: "slate"
 
 siteTitle: "Commonjava"
-projectTitle: " :: Configuration"
+projectTitle: "Configuration"
 tagline: "APIs for Loading Application Configuration Data"
 owner: "John Casey"
 ownerEmail: jdcasey@commonjava.org
