--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ cache:
      - '$HOME/.m2/repository'
 
 install: /bin/true
-script: mvn clean install -Prun-its 
+script: mvn install -B -e -q -Prun-its 
