--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 
 language: java
 jdk:
@@ -8,5 +8,8 @@ cache:
    directories:
      - '$HOME/.m2/repository'
 
+before_install:
+  - curl http://repository.commonjava.org/mavdav/settings/group/settings-ci.xml > $HOME/.m2/settings.xml
+  - sudo rm /etc/mavenrc
 install: /bin/true
-script: mvn install -B -e -q -Prun-its 
+script: mvn clean deploy -V -Prun-its -q -B -e 
