--- a/configuration-dotconf/pom.xml
+++ b/configuration-dotconf/pom.xml
@@ -35,6 +35,10 @@
     </dependency>
     
     <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-interpolation</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.xbean</groupId>
       <artifactId>xbean-reflect</artifactId>
     </dependency>
