--- a/configuration-dotconf/pom.xml
+++ b/configuration-dotconf/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.commonjava.util</groupId>
     <artifactId>configuration</artifactId>
-    <version>0.7.2-SNAPSHOT</version>
+    <version>0.8</version>
   </parent>
   
   <artifactId>configuration-dotconf</artifactId>
