new variant of config loader method that allow passing in a configured interpolator
Conflicts:
	api/pom.xml
	dotconf/pom.xml
	pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   
   <groupId>org.commonjava.util</groupId>
   <artifactId>configuration</artifactId>
-  <version>0.9-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Consolidated Configuration Support</name>
@@ -44,10 +44,9 @@
   </properties>
 
   <scm>
-    <connection>scm:git:https://github.com/Commonjava/configuration.git</connection>
+    <connection>https://github.com/Commonjava/configuration.git</connection>
     <developerConnection>scm:git:git@github.com:Commonjava/configuration.git</developerConnection>
     <url>http://github.com/Commonjava/configuration</url>
-    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
@@ -95,7 +94,7 @@
       <dependency>
         <groupId>org.commonjava.util</groupId>
         <artifactId>configuration-api</artifactId>
-        <version>0.9-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.apache.xbean</groupId>
@@ -105,7 +104,7 @@
       <dependency>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-interpolation</artifactId>
-        <version>1.19</version>
+        <version>1.25</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
